--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,9 @@ legend {
   margin-top: 2px;
   padding: 20px 0;
 }
-input {
+input:not(input[type='checkbox']),
+input:not(input[type='radio']),
+select {
   width: 100%;
   margin-top: 5px;
   padding: 10px;
