--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,31 @@ input::placeholder {
   display: flex;
   flex-direction: column;  
 }
+#newsletter label {
+  line-height: 1.5em;
+  margin-bottom: 10px;
+}
+#newsletter label:not(:first-child){
+  margin-top: 10px;
+}
 #newsletter textarea {
   padding: 0;
+}
+.newsletter-option {
+  margin-top: 10px;
+}
+.newsletter-option label {
+  margin-left: 5px;
+}
+.btn {
+  color: #fff;
+  border-radius: 2px;
+  width: 100%;
+  padding: 10px 0;
+  background-color: #4ebbb5;
+  border: 0;
+  margin-top: 20px;
+  font-family: "Merriweather", "Times New Roman", Times, serif;
+  font-size: 1.15em;
 }
 
