--- a/css/styles.css
+++ b/css/styles.css
@@ -103,4 +103,11 @@ input::placeholder {
   font-family: "Merriweather", "Times New Roman", Times, serif;
   font-size: 1.15em;
 }
+footer {
+  margin-top: 25px;
+  text-align: center;
+  font-size: 0.80em;
+  font-style: italic;
+  color: rgba(0, 0, 0, 0.5);
+}
 
