--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,11 @@ h2 {
   display: flex;
   flex-direction: column;
 }
+#contact .contact-info {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 5px;
+}
 #newsletter {
   margin-top: 20px;
 }
@@ -85,7 +90,7 @@ input::placeholder {
   margin-top: 10px;
 }
 #newsletter textarea {
-  padding: 0;
+  padding: 5px;
 }
 .newsletter-option {
   margin-top: 10px;
@@ -93,7 +98,7 @@ input::placeholder {
 .newsletter-option label {
   margin-left: 5px;
 }
-.btn {
+#submit-btn {
   color: #fff;
   border-radius: 2px;
   width: 100%;
@@ -110,5 +115,16 @@ footer {
   font-size: 0.80em;
   font-style: italic;
   color: rgba(0, 0, 0, 0.5);
+}
+@media (min-width: 768px){
+  .container {
+    width: 45%;
+    max-width: 1000px;
+  }
+  #contact .contact-info {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+  }
+  
 }
 
